--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <h3>Sample Ad Page</h3>
     </header>
+    <p>Click <a href="page1.html">here</a> to go to the destination page.</p>
 </body>
 
 </html>
