--- a/page1.html
+++ b/page1.html
@@ -6,6 +6,8 @@
     <title>Sample Ad Page</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3560435542713540"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
