--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="script.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3560435542713540"
      crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-3560435542713540">
 </head>
 
 <body>
